--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <h2 class="elements__card-heading">
                             Карачаевск
                         </h2>
-                        <button class="elements__card-like"></button>
+                        <button class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
                 <li class="elements__item">
@@ -46,7 +46,7 @@
                         <h2 class="elements__card-heading">
                             Гора Эльбрус
                         </h2>
-                        <button class="elements__card-like"></button>
+                        <button class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
                 <li class="elements__item">
@@ -55,7 +55,7 @@
                         <h2 class="elements__card-heading">
                             Домбай
                         </h2>
-                        <button class="elements__card-like"></button>
+                        <button class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
                 <li class="elements__item">
@@ -64,7 +64,7 @@
                         <h2 class="elements__card-heading">
                             Гора Эльбрус
                         </h2>
-                        <button class="elements__card-like"></button>
+                        <button class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
                 <li class="elements__item">
@@ -73,7 +73,7 @@
                         <h2 class="elements__card-heading">
                             Домбай
                         </h2>
-                        <button class="elements__card-like"></button>
+                        <button class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
                 <li class="elements__item">
@@ -82,12 +82,34 @@
                         <h2 class="elements__card-heading">
                             Карачаево-Черкесск
                         </h2>
-                        <button class="elements__card-like"></button>
+                        <button class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
             </ul>
         </section>
     </main>
-    
+
+    <footer class="footer">
+        <p class="footer__copyright">
+            &copy; 2020 Mesto Russia
+        </p>
+    </footer>
+
+    <div class="popup">
+        <div class="popup__content">
+            <button class="popup__close"></button>
+            <h3 class="popup__title">
+                Редактировать профиль
+            </h3>
+            <form action="" class="popup__form">
+                <input type="text" class="popup__input popup__input-name" placeholder="Имя">
+                <input type="text" class="popup__input popup__input-about" placeholder="О себе">
+                <button type="submit" class="popup__button">
+                    Сохранить
+                </button>
+            </form>
+        </div>
+    </div>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
