--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h3 class="popup__title">
                 Редактировать профиль
             </h3>
-            <form action="" class="popup__form">
+            <form class="popup__form">
                 <input type="text" class="popup__input popup__input-name" placeholder="Имя">
                 <input type="text" class="popup__input popup__input-about" placeholder="О себе">
                 <button type="submit" class="popup__button">
