--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="elements">
             <ul class="elements__list">
                 <li class="elements__item">
-                    <img src="./images/karach.jpg" alt="" class="elements__item-image">
+                    <img src="./images/karach.jpg" alt="Карачаево-Черкесск" class="elements__item-image">
                     <div class="elements__card-info">
                         <h2 class="elements__card-heading">
                             Карачаевск
@@ -41,7 +41,7 @@
                     </div>
                 </li>
                 <li class="elements__item">
-                    <img src="./images/elbrus.jpg" alt="" class="elements__item-image">
+                    <img src="./images/elbrus.jpg" alt="Эльбрус" class="elements__item-image">
                     <div class="elements__card-info">
                         <h2 class="elements__card-heading">
                             Гора Эльбрус
@@ -50,7 +50,7 @@
                     </div>
                 </li>
                 <li class="elements__item">
-                    <img src="./images/dombai.jpg" alt="" class="elements__item-image">
+                    <img src="./images/dombai.jpg" alt="Домбай" class="elements__item-image">
                     <div class="elements__card-info">
                         <h2 class="elements__card-heading">
                             Домбай
@@ -59,7 +59,7 @@
                     </div>
                 </li>
                 <li class="elements__item">
-                    <img src="./images/elbrus.jpg" alt="" class="elements__item-image">
+                    <img src="./images/elbrus.jpg" alt="Эльбрус" class="elements__item-image">
                     <div class="elements__card-info">
                         <h2 class="elements__card-heading">
                             Гора Эльбрус
@@ -68,7 +68,7 @@
                     </div>
                 </li>
                 <li class="elements__item">
-                    <img src="./images/dombai.jpg" alt="" class="elements__item-image">
+                    <img src="./images/dombai.jpg" alt="Домбай" class="elements__item-image">
                     <div class="elements__card-info">
                         <h2 class="elements__card-heading">
                             Домбай
@@ -77,7 +77,7 @@
                     </div>
                 </li>
                 <li class="elements__item">
-                    <img src="./images/karach.jpg" alt="" class="elements__item-image">
+                    <img src="./images/karach.jpg" alt="Карачаево-Черкесск" class="elements__item-image">
                     <div class="elements__card-info">
                         <h2 class="elements__card-heading">
                             Карачаево-Черкесск
