--- a/index.html
+++ b/index.html
@@ -17,16 +17,12 @@
             <img src="./images/avatar.jpg" alt="Аватар автора" class="profile__avatar">
             <div class="profile__info">
                 <div class="profile__container">
-                    <h1 class="profile__name">
-                            Жак-Ив Кусто
-                    </h1>
-                    <button class="profile__edit-button"></button>
+                    <h1 class="profile__name">Жак-Ив Кусто</h1>
+                    <button type="button" class="profile__edit-button"></button>
                 </div>
-                <h2 class="profile__description">
-                        Исследователь океана
-                </h2>
+                <h2 class="profile__description">Исследователь океана</h2>
             </div>
-            <button class="profile__add-button"></button>
+            <button type="button" class="profile__add-button"></button>
         </section>
         
         <section class="elements">
@@ -37,7 +33,7 @@
                         <h2 class="elements__card-heading">
                             Карачаевск
                         </h2>
-                        <button class="elements__card-like elements__card-like_active"></button>
+                        <button type="button" class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
                 <li class="elements__item">
@@ -46,7 +42,7 @@
                         <h2 class="elements__card-heading">
                             Гора Эльбрус
                         </h2>
-                        <button class="elements__card-like elements__card-like_active"></button>
+                        <button type="button" class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
                 <li class="elements__item">
@@ -55,7 +51,7 @@
                         <h2 class="elements__card-heading">
                             Домбай
                         </h2>
-                        <button class="elements__card-like elements__card-like_active"></button>
+                        <button type="button" class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
                 <li class="elements__item">
@@ -64,7 +60,7 @@
                         <h2 class="elements__card-heading">
                             Гора Эльбрус
                         </h2>
-                        <button class="elements__card-like elements__card-like_active"></button>
+                        <button type="button" class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
                 <li class="elements__item">
@@ -73,7 +69,7 @@
                         <h2 class="elements__card-heading">
                             Домбай
                         </h2>
-                        <button class="elements__card-like elements__card-like_active"></button>
+                        <button type="button" class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
                 <li class="elements__item">
@@ -82,7 +78,7 @@
                         <h2 class="elements__card-heading">
                             Карачаево-Черкесск
                         </h2>
-                        <button class="elements__card-like elements__card-like_active"></button>
+                        <button type="button" class="elements__card-like elements__card-like_active"></button>
                     </div>
                 </li>
             </ul>
@@ -97,13 +93,13 @@
 
     <div class="popup">
         <div class="popup__content">
-            <button class="popup__close"></button>
-            <h3 class="popup__title">
+            <button type="button" class="popup__close"></button>
+            <h2 class="popup__title">
                 Редактировать профиль
-            </h3>
-            <form class="popup__form">
-                <input type="text" class="popup__input popup__input-name" placeholder="Имя">
-                <input type="text" class="popup__input popup__input-about" placeholder="О себе">
+            </h2>
+            <form name="profile" class="popup__form">
+                <input name="name" type="text" class="popup__input popup__input-name" placeholder="Имя">
+                <input name="bio" type="text" class="popup__input popup__input-about" placeholder="О себе">
                 <button type="submit" class="popup__button">
                     Сохранить
                 </button>
