--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
         <section class="elements">
             <ul class="elements__list">
-                <li class="elements__item">
+ <!--              <li class="elements__item">
                     <img src="./images/karach.jpg" alt="Карачаево-Черкесск" class="elements__item-image">
                     <div class="elements__card-info">
                         <h2 class="elements__card-heading">
@@ -80,7 +80,7 @@
                         </h2>
                         <button type="button" class="elements__card-like elements__card-like_active"></button>
                     </div>
-                </li>
+                </li>-->
             </ul>
         </section>
     </main>
@@ -91,9 +91,9 @@
         </p>
     </footer>
 
-    <div class="popup">
+    <div class="popup popup-edit">
         <div class="popup__content">
-            <button type="button" class="popup__close"></button>
+            <button type="button" class="popup__close popup__close-edit"></button>
             <h2 class="popup__title">
                 Редактировать профиль
             </h2>
@@ -106,6 +106,33 @@
             </form>
         </div>
     </div>
+
+    <div class="popup popup-add">
+        <div class="popup__content">
+            <button type="button" class="popup__close popup__close-add"></button>
+            <h2 class="popup__title">
+                Новое место
+            </h2>
+            <form name="profile" class="popup__form">
+                <input name="place-name" type="text" class="popup__input popup__input-place-name" placeholder="Название">
+                <input name="place-link" type="text" class="popup__input popup__input-place-link" placeholder="Ссылка на картинку">
+                <button type="submit" class="popup__button">
+                    Создать
+                </button>
+            </form>
+        </div>
+    </div>
+
+    <template id="card">
+        <li class="elements__item">
+            <img class="elements__item-image">
+            <div class="elements__card-info">
+                <h2 class="elements__card-heading"></h2>
+                <button type="button" class="elements__card-like elements__card-like_active"></button>
+            </div>
+        </li>
+    </template>
+
     <script src="./scripts/index.js"></script>
 </body>
 </html>
