add function to add a pic

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             <h2 class="popup__title">
                 Редактировать профиль
             </h2>
-            <form name="profile" class="popup__form">
+            <form name="profile" class="popup__form popup__form-edit-profile">
                 <input name="name" type="text" class="popup__input popup__input-name" placeholder="Имя">
                 <input name="bio" type="text" class="popup__input popup__input-about" placeholder="О себе">
-                <button type="submit" class="popup__button">
+                <button type="submit" class="popup__button popup__profile-edit-btn">
                     Сохранить
                 </button>
             </form>
@@ -113,10 +113,10 @@
             <h2 class="popup__title">
                 Новое место
             </h2>
-            <form name="profile" class="popup__form">
+            <form name="profile" class="popup__form popup__form-add-card">
                 <input name="place-name" type="text" class="popup__input popup__input-place-name" placeholder="Название">
                 <input name="place-link" type="text" class="popup__input popup__input-place-link" placeholder="Ссылка на картинку">
-                <button type="submit" class="popup__button">
+                <button type="submit" class="popup__button popup__card-add-btn">
                     Создать
                 </button>
             </form>
