--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <img class="elements__item-image">
             <div class="elements__card-info">
                 <h2 class="elements__card-heading"></h2>
-                <button type="button" class="elements__card-like elements__card-like_active"></button>
+                <button type="button" class="elements__card-like"></button>
             </div>
         </li>
     </template>
