added transition and picture popup

--- a/index.html
+++ b/index.html
@@ -27,60 +27,7 @@
         
         <section class="elements">
             <ul class="elements__list">
- <!--              <li class="elements__item">
-                    <img src="./images/karach.jpg" alt="Карачаево-Черкесск" class="elements__item-image">
-                    <div class="elements__card-info">
-                        <h2 class="elements__card-heading">
-                            Карачаевск
-                        </h2>
-                        <button type="button" class="elements__card-like elements__card-like_active"></button>
-                    </div>
-                </li>
-                <li class="elements__item">
-                    <img src="./images/elbrus.jpg" alt="Эльбрус" class="elements__item-image">
-                    <div class="elements__card-info">
-                        <h2 class="elements__card-heading">
-                            Гора Эльбрус
-                        </h2>
-                        <button type="button" class="elements__card-like elements__card-like_active"></button>
-                    </div>
-                </li>
-                <li class="elements__item">
-                    <img src="./images/dombai.jpg" alt="Домбай" class="elements__item-image">
-                    <div class="elements__card-info">
-                        <h2 class="elements__card-heading">
-                            Домбай
-                        </h2>
-                        <button type="button" class="elements__card-like elements__card-like_active"></button>
-                    </div>
-                </li>
-                <li class="elements__item">
-                    <img src="./images/elbrus.jpg" alt="Эльбрус" class="elements__item-image">
-                    <div class="elements__card-info">
-                        <h2 class="elements__card-heading">
-                            Гора Эльбрус
-                        </h2>
-                        <button type="button" class="elements__card-like elements__card-like_active"></button>
-                    </div>
-                </li>
-                <li class="elements__item">
-                    <img src="./images/dombai.jpg" alt="Домбай" class="elements__item-image">
-                    <div class="elements__card-info">
-                        <h2 class="elements__card-heading">
-                            Домбай
-                        </h2>
-                        <button type="button" class="elements__card-like elements__card-like_active"></button>
-                    </div>
-                </li>
-                <li class="elements__item">
-                    <img src="./images/karach.jpg" alt="Карачаево-Черкесск" class="elements__item-image">
-                    <div class="elements__card-info">
-                        <h2 class="elements__card-heading">
-                            Карачаево-Черкесск
-                        </h2>
-                        <button type="button" class="elements__card-like elements__card-like_active"></button>
-                    </div>
-                </li>-->
+ 
             </ul>
         </section>
     </main>
@@ -123,8 +70,19 @@
         </div>
     </div>
 
+    <div class="popup popup-picture">
+        <div class="popup__content_picture">
+            <figure class="popup__figure">
+                <img src="#" alt="" class="popup__image">
+                <figcaption class="popup__caption"></figcaption>
+            </figure>
+            <button type="button" class="popup__close popup__close-pic"></button>
+        </div>
+    </div>
+
     <template id="card">
         <li class="elements__item">
+            <button type="button" class="elements__card-delete"></button>
             <img class="elements__item-image">
             <div class="elements__card-info">
                 <h2 class="elements__card-heading"></h2>
