--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             &copy; 2020 Mesto Russia
         </p>
     </footer>
-
+<!-- попап редактирования профиля -->
     <div class="popup popup-edit">
         <div class="popup__content">
             <button type="button" class="popup__close popup__close-edit"></button>
@@ -53,7 +53,7 @@
             </form>
         </div>
     </div>
-
+<!-- попап добавления карточек -->
     <div class="popup popup-add">
         <div class="popup__content">
             <button type="button" class="popup__close popup__close-add"></button>
@@ -69,7 +69,7 @@
             </form>
         </div>
     </div>
-
+<!-- попап просмотра картинок -->
     <div class="popup popup-picture">
         <div class="popup__content_picture">
             <figure class="popup__figure">
@@ -79,7 +79,7 @@
             <button type="button" class="popup__close popup__close-pic"></button>
         </div>
     </div>
-
+<!-- шаблон карточки -->
     <template id="card">
         <li class="elements__item">
             <button type="button" class="elements__card-delete"></button>
