--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 <!-- попап просмотра картинок -->
     <div class="popup popup-picture">
-        <div class="popup__content_picture">
+        <div class="popup__content-picture">
             <figure class="popup__figure">
                 <img src="#" alt="" class="popup__image">
                 <figcaption class="popup__caption"></figcaption>
