--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             <form name="profile" class="popup__form popup__form-edit-profile" novalidate>
                 <label for="" class="popup__form-label">
                     <input id="name" name="name" type="text" class="popup__input popup__input-name" placeholder="Имя" minlength="2" maxlength="40" required>
-                    <span id="error-name" class="error-message"></span>
+                    <span id="error-name" class="popup__error name-error"></span>
                 </label>
                 <label for="" class="popup__form-label">
                     <input id="bio" name="bio" type="text" class="popup__input popup__input-about" placeholder="О себе" minlength="2" maxlength="200" required>
-                    <span id="error-bio" class="error-message"></span>
+                    <span id="error-bio" class="popup__error bio-error"></span>
                 </label>
                 <button type="submit" class="popup__button popup__profile-edit-btn">
                     Сохранить
@@ -69,11 +69,11 @@
             <form name="profile" class="popup__form popup__form-add-card">
                 <label for="" class="popup__form-label">
                     <input id="place-name" name="place-name" type="text" class="popup__input popup__input-place-name" placeholder="Название" minlength="2" maxlength="30" required>
-                    <span id="error-place-name" class="error-message"></span>
+                    <span id="error-place-name" class="popup__error place-name-error"></span>
                 </label>
                 <label for="" class="popup__form-label">
                     <input id="place-link" name="place-link" type="url" class="popup__input popup__input-place-link" placeholder="Ссылка на картинку" required>
-                    <span id="error-place-link" class="error-message"></span>
+                    <span id="error-place-link" class="popup__error place-link-error"></span>
                 </label>
                 <button type="submit" class="popup__button popup__card-add-btn">
                     Создать
@@ -104,5 +104,6 @@
     </template>
 
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
 </body>
 </html>
