--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
     </div>
 <!-- шаблон карточки -->
-    <template id="card">
+    <template id="card" class="template-item">
         <li class="elements__item">
             <button type="button" class="elements__card-delete"></button>
             <img class="elements__item-image">
@@ -104,7 +104,6 @@
         </li>
     </template>
 
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
 </body>
 </html>
