refactor code using new PopupWithForm class

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             </h2>
             <form name="profile" class="popup__form popup__form-add-card">
                 <label for="" class="popup__form-label">
-                    <input id="place-name" name="place-name" type="text" class="popup__input popup__input-place-name" placeholder="Название" minlength="2" maxlength="30" required>
+                    <input id="place-name" name="name" type="text" class="popup__input popup__input-place-name" placeholder="Название" minlength="2" maxlength="30" required>
                     <span id="error-place-name" class="popup__error place-name-error"></span>
                 </label>
                 <label for="" class="popup__form-label">
-                    <input id="place-link" name="place-link" type="url" class="popup__input popup__input-place-link" placeholder="Ссылка на картинку" required>
+                    <input id="place-link" name="link" type="url" class="popup__input popup__input-place-link" placeholder="Ссылка на картинку" required>
                     <span id="error-place-link" class="popup__error place-link-error"></span>
                 </label>
                 <button type="submit" class="popup__button popup__card-add-btn">
