do hotfix after review except the HANDLECARDCLICK

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
             <h2 class="popup__title">
                 Редактировать профиль
             </h2>
-            <form name="profile" class="popup__form popup__form-edit-profile" novalidate>
+            <form name="profile-edit-form" class="popup__form popup__form-edit-profile" novalidate>
                 <label for="" class="popup__form-label">
                     <input id="name" name="name" type="text" class="popup__input popup__input-name" placeholder="Имя" minlength="2" maxlength="40" required>
                     <span id="error-name" class="popup__error name-error"></span>
@@ -66,7 +66,7 @@
             <h2 class="popup__title">
                 Новое место
             </h2>
-            <form name="profile" class="popup__form popup__form-add-card">
+            <form name="card-add-form" class="popup__form popup__form-add-card">
                 <label for="" class="popup__form-label">
                     <input id="place-name" name="name" type="text" class="popup__input popup__input-place-name" placeholder="Название" minlength="2" maxlength="30" required>
                     <span id="error-place-name" class="popup__error place-name-error"></span>
