add like counter styles & markup

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,10 @@
             <img class="elements__item-image">
             <div class="elements__card-info">
                 <h2 class="elements__card-heading"></h2>
-                <button type="button" class="elements__card-like"></button>
+                <div>
+                    <button type="button" class="elements__card-like"></button>
+                    <div class="elements__card-like-counter">1</div>
+                </div>
             </div>
         </li>
     </template>
