--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                     <span id="error-name" class="popup__error name-error"></span>
                 </label>
                 <label for="" class="popup__form-label">
-                    <input id="bio" name="bio" type="text" class="popup__input popup__input-about" placeholder="О себе" minlength="2" maxlength="200" required>
+                    <input id="bio" name="about" type="text" class="popup__input popup__input-about" placeholder="О себе" minlength="2" maxlength="200" required>
                     <span id="error-bio" class="popup__error bio-error"></span>
                 </label>
                 <button type="submit" class="popup__button popup__profile-edit-btn">
