add new PopupWithConfirmation and connect a method to delete a card with it

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
             <button type="button" class="popup__close popup__close-pic"></button>
         </div>
     </div>
+<!-- попап подтверждения удаления карточки с сервера -->
     <div class="popup popup-delete">
         <div class="popup__content-delete">
             <button type="button" class="popup__close popup__close-add"></button>
