--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 
     <main class="content">
         <section class="profile">
+            <button class="profile__button-change-avatar"></button>
             <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар автора" class="profile__avatar">
             <div class="profile__info">
                 <div class="profile__container">
@@ -100,6 +101,23 @@
             </h2>
             <button type="submit" class="popup__button popup__card-del-btn">
                 Да
+            </button>
+        </div>
+    </div>
+<!-- попап редактирования аватара -->
+    <div class="popup popup__avatar">
+        <div class="popup__content-avatar">
+            <button type="button" class="popup__close popup__close-add"></button>
+            <h2 class="popup__title">
+                Обновить аватар
+            </h2>
+            <form name="avatar-change-form" class="popup__form popup__form-add-avatar">
+                <label for="" class="popup__form-label">
+                    <input id="avatar-url" name="link" type="url" class="popup__input popup__input-avatar" placeholder="Ссылка на аватар" required>
+                    <span id="error-avatar" class="popup__error avatar-url-error"></span>
+                </label>
+            <button type="submit" class="popup__button popup__card-change-avatar">
+                Сохранить
             </button>
         </div>
     </div>
