--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
                     <input id="avatar-url" name="link" type="url" class="popup__input popup__input-avatar" placeholder="Ссылка на аватар" required>
                     <span id="error-avatar" class="popup__error avatar-url-error"></span>
                 </label>
-            <button type="submit" class="popup__button popup__card-change-avatar">
-                Сохранить
-            </button>
+                <button type="submit" class="popup__button popup__card-change-avatar">
+                    Сохранить
+                </button>
+            </form>
         </div>
     </div>
 <!-- шаблон карточки -->
