--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
     </div>
 <!-- попап редактирования аватара -->
-    <div class="popup popup__avatar">
+    <div class="popup popup-avatar">
         <div class="popup__content-avatar">
             <button type="button" class="popup__close popup__close-add"></button>
             <h2 class="popup__title">
