--- a/src/index.html
+++ b/src/index.html
@@ -99,9 +99,11 @@
             <h2 class="popup__title">
                 Вы уверены?
             </h2>
-            <button type="submit" class="popup__button popup__card-del-btn">
-                Да
-            </button>
+            <form name="card-delete-form" class="popup__form">
+                <button type="submit" class="popup__button popup__card-del-btn">
+                    Да
+                </button>
+            </form>
         </div>
     </div>
 <!-- попап редактирования аватара -->
