--- a/index.html
+++ b/index.html
@@ -1,143 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mesto</title>
-    <link rel="icon" href="./favicon.icon">
-<script defer src="bundle.js"></script><link href="build.css" rel="stylesheet"></head>
-<body class="page">
-    <header class="header">
-        <img src="images/logo.e1792cd1bf55c68d1538.svg" alt="Логотип" class="header__logo">
-    </header>
-
-    <main class="content">
-        <section class="profile">
-            <button class="profile__button-change-avatar"></button>
-            <img src="images/avatar.e7d376649aca6b620fcf.jpg" alt="Аватар автора" class="profile__avatar">
-            <div class="profile__info">
-                <div class="profile__container">
-                    <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button type="button" class="profile__edit-button"></button>
-                </div>
-                <h2 class="profile__description">Исследователь океана</h2>
-            </div>
-            <button type="button" class="profile__add-button"></button>
-        </section>
-        
-        <section class="elements">
-            <ul class="elements__list">
- 
-            </ul>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <p class="footer__copyright">
-            &copy; 2020 Mesto Russia
-        </p>
-    </footer>
-<!-- попап редактирования профиля -->
-    <div class="popup popup-edit">
-        <div class="popup__content">
-            <button type="button" class="popup__close popup__close-edit"></button>
-            <h2 class="popup__title">
-                Редактировать профиль
-            </h2>
-            <form name="profile-edit-form" class="popup__form popup__form-edit-profile" novalidate>
-                <label for="" class="popup__form-label">
-                    <input id="name" name="name" type="text" class="popup__input popup__input-name" placeholder="Имя" minlength="2" maxlength="40" required>
-                    <span id="error-name" class="popup__error name-error"></span>
-                </label>
-                <label for="" class="popup__form-label">
-                    <input id="bio" name="about" type="text" class="popup__input popup__input-about" placeholder="О себе" minlength="2" maxlength="200" required>
-                    <span id="error-bio" class="popup__error bio-error"></span>
-                </label>
-                <button type="submit" class="popup__button popup__profile-edit-btn">
-                    Сохранить
-                </button>
-            </form>
-        </div>
-    </div>
-<!-- попап добавления карточек -->
-    <div class="popup popup-add">
-        <div class="popup__content">
-            <button type="button" class="popup__close popup__close-add"></button>
-            <h2 class="popup__title">
-                Новое место
-            </h2>
-            <form name="card-add-form" class="popup__form popup__form-add-card">
-                <label for="" class="popup__form-label">
-                    <input id="place-name" name="name" type="text" class="popup__input popup__input-place-name" placeholder="Название" minlength="2" maxlength="30" required>
-                    <span id="error-place-name" class="popup__error place-name-error"></span>
-                </label>
-                <label for="" class="popup__form-label">
-                    <input id="place-link" name="link" type="url" class="popup__input popup__input-place-link" placeholder="Ссылка на картинку" required>
-                    <span id="error-place-link" class="popup__error place-link-error"></span>
-                </label>
-                <button type="submit" class="popup__button popup__card-add-btn">
-                    Создать
-                </button>
-            </form>
-        </div>
-    </div>
-<!-- попап просмотра картинок -->
-    <div class="popup popup-picture">
-        <div class="popup__content-picture">
-            <figure class="popup__figure">
-                <img src="#" alt="" class="popup__image">
-                <figcaption class="popup__caption"></figcaption>
-            </figure>
-            <button type="button" class="popup__close popup__close-pic"></button>
-        </div>
-    </div>
-<!-- попап подтверждения удаления карточки с сервера -->
-    <div class="popup popup-delete">
-        <div class="popup__content-delete">
-            <button type="button" class="popup__close popup__close-add"></button>
-            <h2 class="popup__title">
-                Вы уверены?
-            </h2>
-            <form name="card-delete-form" class="popup__form">
-                <button type="submit" class="popup__button popup__card-del-btn">
-                    Да
-                </button>
-            </form>
-        </div>
-    </div>
-<!-- попап редактирования аватара -->
-    <div class="popup popup-avatar">
-        <div class="popup__content-avatar">
-            <button type="button" class="popup__close popup__close-add"></button>
-            <h2 class="popup__title">
-                Обновить аватар
-            </h2>
-            <form name="avatar-change-form" class="popup__form popup__form-add-avatar">
-                <label for="" class="popup__form-label">
-                    <input id="avatar-url" name="link" type="url" class="popup__input popup__input-avatar" placeholder="Ссылка на аватар" required>
-                    <span id="error-avatar" class="popup__error avatar-url-error"></span>
-                </label>
-                <button type="submit" class="popup__button popup__card-change-avatar">
-                    Сохранить
-                </button>
-            </form>
-        </div>
-    </div>
-<!-- шаблон карточки -->
-    <template id="card" class="template-item">
-        <li class="elements__item">
-            <button type="button" class="elements__card-delete"></button>
-            <img class="elements__item-image">
-            <div class="elements__card-info">
-                <h2 class="elements__card-heading"></h2>
-                <div>
-                    <button type="button" class="elements__card-like"></button>
-                    <div class="elements__card-like-counter"></div>
-                </div>
-            </div>
-        </li>
-    </template>
-
-</body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>mesto</title><link rel="icon" href="./favicon.icon"><script defer="defer" src="bundle.js"></script><link href="build.css" rel="stylesheet"></head><body class="page"><header class="header"><img src="images/logo.e1792cd1bf55c68d1538.svg" alt="Логотип" class="header__logo"></header><main class="content"><section class="profile"><button class="profile__button-change-avatar"></button> <img src="images/avatar.e7d376649aca6b620fcf.jpg" alt="Аватар автора" class="profile__avatar"><div class="profile__info"><div class="profile__container"><h1 class="profile__name">Жак-Ив Кусто</h1><button type="button" class="profile__edit-button"></button></div><h2 class="profile__description">Исследователь океана</h2></div><button type="button" class="profile__add-button"></button></section><section class="elements"><ul class="elements__list"></ul></section></main><footer class="footer"><p class="footer__copyright">&copy; 2020 Mesto Russia</p></footer><div class="popup popup-edit"><div class="popup__content"><button type="button" class="popup__close popup__close-edit"></button><h2 class="popup__title">Редактировать профиль</h2><form name="profile-edit-form" class="popup__form popup__form-edit-profile" novalidate><label for="" class="popup__form-label"><input id="name" name="name" class="popup__input popup__input-name" placeholder="Имя" minlength="2" maxlength="40" required> <span id="error-name" class="popup__error name-error"></span></label> <label for="" class="popup__form-label"><input id="bio" name="about" class="popup__input popup__input-about" placeholder="О себе" minlength="2" maxlength="200" required> <span id="error-bio" class="popup__error bio-error"></span></label> <button type="submit" class="popup__button popup__profile-edit-btn">Сохранить</button></form></div></div><div class="popup popup-add"><div class="popup__content"><button type="button" class="popup__close popup__close-add"></button><h2 class="popup__title">Новое место</h2><form name="card-add-form" class="popup__form popup__form-add-card"><label for="" class="popup__form-label"><input id="place-name" name="name" class="popup__input popup__input-place-name" placeholder="Название" minlength="2" maxlength="30" required> <span id="error-place-name" class="popup__error place-name-error"></span></label> <label for="" class="popup__form-label"><input id="place-link" name="link" type="url" class="popup__input popup__input-place-link" placeholder="Ссылка на картинку" required> <span id="error-place-link" class="popup__error place-link-error"></span></label> <button type="submit" class="popup__button popup__card-add-btn">Создать</button></form></div></div><div class="popup popup-picture"><div class="popup__content-picture"><figure class="popup__figure"><img src="#" alt="" class="popup__image"><figcaption class="popup__caption"></figcaption></figure><button type="button" class="popup__close popup__close-pic"></button></div></div><div class="popup popup-delete"><div class="popup__content-delete"><button type="button" class="popup__close popup__close-add"></button><h2 class="popup__title">Вы уверены?</h2><form name="card-delete-form" class="popup__form"><button type="submit" class="popup__button popup__card-del-btn">Да</button></form></div></div><div class="popup popup-avatar"><div class="popup__content-avatar"><button type="button" class="popup__close popup__close-add"></button><h2 class="popup__title">Обновить аватар</h2><form name="avatar-change-form" class="popup__form popup__form-add-avatar"><label for="" class="popup__form-label"><input id="avatar-url" name="link" type="url" class="popup__input popup__input-avatar" placeholder="Ссылка на аватар" required> <span id="error-avatar" class="popup__error avatar-url-error"></span></label> <button type="submit" class="popup__button popup__card-change-avatar">Сохранить</button></form></div></div><template id="card" class="template-item"><li class="elements__item"><button type="button" class="elements__card-delete"></button> <img class="elements__item-image"><div class="elements__card-info"><h2 class="elements__card-heading"></h2><div><button type="button" class="elements__card-like"></button><div class="elements__card-like-counter"></div></div></div></li></template></body></html>
